Update handle logic into EngineSpecificMethodContext
Signed-off-by: Junqiu Lei <junqiu@amazon.com>